# SMA_incubyte

./: .gitignore  README.md  pyproject.toml
artifacts/: architecture.md  deployment.md  design-notes.md  prompts-log.md
backend/: .coverage  alembic.ini  pyproject.toml  requirements.txt  test.db
backend/app/: enums.py  main.py
backend/app/api/v1/: employees.py  insights.py
backend/app/core/: __init__.py  config.py  database.py
backend/app/models/: employee.py
backend/app/repositories/: __init__.py  base.py  employee_repo.py
backend/app/schemas/: employee.py
backend/app/services/: employee_service.py  insights_service.py
backend/data/: app.db  first_names.txt  last_names.txt
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 0001_create_employees_table.py
backend/scripts/: create_tables.py  seed.py
backend/tests/: conftest.py
backend/tests/integration/: test_employees_api.py  test_health_api.py  test_insights_api.py
backend/tests/unit/: test_employee_model_validation.py  test_employee_service.py  test_insights_service.py
frontend/: package-lock.json  package.json  tsconfig.json
frontend/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  next-server.js.nft.json  prerender-manifest.js  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
frontend/.next/cache/: .tsbuildinfo
frontend/.next/server/: app-paths-manifest.json  middleware-build-manifest.js  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: _not-found.html  _not-found.rsc  employees.html  employees.rsc  index.html  index.rsc  insights.html  insights.rsc  page.js  page_client-reference-manifest.js
frontend/.next/server/chunks/: 819.js
frontend/.next/server/pages/: 500.html
frontend/.next/types/app/: page.ts  (+1 more)
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/lib/: api.ts  insights.ts
src/sma_incubyte/: __init__.py
tests/: test_sample.py
(+75 files in other folders)
