[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sma-incubyte-backend"
version = "0.1.0"
description = "Salary management API for Incubyte assessment"
authors = [{name = "Incubyte Assessment"}]
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.23.0",
  "sqlalchemy>=2.0",
  "alembic>=1.11",
  "pydantic>=2.8",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.4",
  "pytest-cov>=4.1",
  "httpx>=0.28",
]
